--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+
+# Intellij IDEA
+**/.idea/
+**/*.iml
